realoquei 3 pastas (script, style, imagem

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
            
             
             <div class="div-link">
-                <a class="a-sociais" href="https://github.com/JoaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/png/github.png" alt="GitHub" width="45px" height="50px"> </a>
-                <a class="a-sociais" href="https://www.linkedin.com/in/jo%C3%A3o-torre5-the-developer/?originalSubdomain=br" target="_blank"><img src="" alt=""> <img src="/imagem/png/linkedin.png" alt="Linkedin" width="40px" height="50px"> </a>
-                <a class="a-sociais" href="" target="_blank"><img src="" alt=""> <img src="/imagem/png/instagram.png" alt="Instagram" width="40px" height="50px"></a>
-                <a class="a-sociais" href="https://www.youtube.com/@joaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/png/youtube.png" alt="YouTube" width="40px" height="50px"></a>
+                <a class="a-sociais" href="https://github.com/JoaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/github.png" alt="GitHub" width="45px" height="50px"> </a>
+                <a class="a-sociais" href="https://www.linkedin.com/in/jo%C3%A3o-torre5-the-developer/?originalSubdomain=br" target="_blank"><img src="" alt=""> <img src="/imagem/linkedin.png" alt="Linkedin" width="40px" height="50px"> </a>
+                <a class="a-sociais" href="" target="_blank"><img src="" alt=""> <img src="/imagem/instagram.png" alt="Instagram" width="40px" height="50px"></a>
+                <a class="a-sociais" href="https://www.youtube.com/@joaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/youtube.png" alt="YouTube" width="40px" height="50px"></a>
             </div>
         </div>
     </div>
