--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="a-nav" href=""> PROJETOS </a>
             </nav>
             <div class="logo-container">
-                <img src="./imagem/png/logo.png" alt="Logo marca" width="80px" height="80px">
+                <img src="./imagem/logo.png" alt="Logo marca" width="80px" height="80px">
                 <span class="nome-logo"> João Torres <br> Dev-Jr.</span>
             </div>
             <a class="a-orcamento" href=""> CONTATOS </a>
@@ -26,8 +26,8 @@
 
     <div class="banner-container">
         <div class="div-img-banner-main">
-            <img id="cell-banner" src="/imagem/png/celularapp.png" alt="">
-            <img id="note-banner" src="./imagem/png/notebook01.png" alt="">
+            <img id="cell-banner" src="/imagem/celularapp.png" alt="">
+            <img id="note-banner" src="./imagem/notebook01.png" alt="">
         </div>
 
         <div class="text-banner-main">
