--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="">
     <link rel="stylesheet" href="./style/style.css">
-    <title> João Torres- Desenvolvedor Full-Stack </title>
+    <title> João Torre5- Desenvolvedor Full-Stack </title>
 </head>
 <body>
     <header class="cabecalho">
