--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="banner-container">
         <div class="div-img-banner-main">
-            <img id="cell-banner" src="/imagem/celularapp.png" alt="">
+            <img id="cell-banner" src="./imagem/celularapp.png" alt="">
             <img id="note-banner" src="./imagem/notebook01.png" alt="">
         </div>
 
@@ -41,10 +41,10 @@
            
             
             <div class="div-link">
-                <a class="a-sociais" href="https://github.com/JoaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/github.png" alt="GitHub" width="45px" height="50px"> </a>
-                <a class="a-sociais" href="https://www.linkedin.com/in/jo%C3%A3o-torre5-the-developer/?originalSubdomain=br" target="_blank"><img src="" alt=""> <img src="/imagem/linkedin.png" alt="Linkedin" width="40px" height="50px"> </a>
-                <a class="a-sociais" href="" target="_blank"><img src="" alt=""> <img src="/imagem/instagram.png" alt="Instagram" width="40px" height="50px"></a>
-                <a class="a-sociais" href="https://www.youtube.com/@joaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="/imagem/youtube.png" alt="YouTube" width="40px" height="50px"></a>
+                <a class="a-sociais" href="https://github.com/JoaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="./imagem/github.png" alt="GitHub" width="45px" height="50px"> </a>
+                <a class="a-sociais" href="https://www.linkedin.com/in/jo%C3%A3o-torre5-the-developer/?originalSubdomain=br" target="_blank"><img src="" alt=""> <img src="./imagem/linkedin.png" alt="Linkedin" width="40px" height="50px"> </a>
+                <a class="a-sociais" href="" target="_blank"><img src="" alt=""> <img src="./imagem/instagram.png" alt="Instagram" width="40px" height="50px"></a>
+                <a class="a-sociais" href="https://www.youtube.com/@joaoTorre5-oDev" target="_blank"><img src="" alt=""> <img src="./imagem/youtube.png" alt="YouTube" width="40px" height="50px"></a>
             </div>
         </div>
     </div>
@@ -56,6 +56,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati non fuga ut necessitatibus numquam assumenda labore totam minima odit eveniet ipsa laboriosam quidem laborum sit, soluta accusantium quam placeat et!</p>
         </div>
     </section>
-    <script src="/script/textos/span-txt-show.js"></script>
+    <script src="./script/textos/span-txt-show.js"></script>
 </body>
 </html>
